# ai-textbook

./: .buildinfo  .gitignore  README.md  first-project.html  firstproject.html  genindex.html  intro.html  lesson1.html  main.py  objects.inv  prompt-engineering.html  pyproject.toml  search.html  searchindex.js
_sources/: first-project.md  firstproject.md  intro.md  lesson1.md  prompt-engineering.md
book/: _toc.yml  first-project.md  lesson1.md  prompt-engineering.md
book/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
book/_build/html/: .buildinfo  genindex.html  intro.html  search.html  searchindex.js
book/_build/jupyter_execute/: markdown-notebooks.ipynb
